Fixed a minor grammatical error.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages. What happens if i make a change here?</p>
+<p>I'm hosted with GitHub Pages. What happens if I make a change here?</p>
 </body>
 </html>
