--- a/index.html
+++ b/index.html
@@ -1,7 +1,103 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+<meta charset="utf-8">
+      <title>My Path to Becomeing a Software Engineer</title>
+      <h1>My Path to Becomeing a Software Engineer</h1>
+      <meta name="description" content="This is a blog by Scott Eskridge as he tracks his leanring course to becomeing a software engineer">
+      <link rel="stylesheet" href="my_css_file.css">
+      <script src="my_javascript_library.js"></script>
+      <script src="another_javascript_file.js"></script>
+  </head>
+
+  <title>
+  </title>
+
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages. What happens if I make a change here?</p>
+
+<div id="wrapper">
+           <div id="header">
+               <h1>Logo</h1>
+               <ul>
+                   <li>Home</li>
+                   <li>Contact Us</li>
+                   <li>Information</li>
+               </ul>
+           </div>
+           <div id="main-content">
+               <h2>Article One</h2>
+               <p>I'm starting to learn HTML even though I'm still not really solid on formatting and layout.</p>
+               <h2>Article Two</h2>
+               <p>At somepoint I should figure out if there is a spell checker for Atom,
+                 hmm how would that even work? Perhaps the best thing would be to copy blocks of text from word?</p>
+           </div>
+           <div id="side-menu">
+
+               <ul>
+                   <li>Page 1</li>
+                   <li>Page 2</li>
+                   <li>Page 3</li>
+                   <li>Page 4</li>
+                   <li>Page 5</li>
+               </ul>
+           </div>
+           <div id="footer">
+               <a href="/home">HOME</a>
+               <a href="/contact">CONTACT US</a>
+               <a href="/info">IFORMATION</a>
+           </div>
+      </div>
+
+      <h1>
+        My Registration Form
+      </h1>
+        <form>
+
+          <label>
+              First Name:<input type="text" name="firstname">
+          </label>
+          <p></p>
+          <label>
+              Last Name:<input type="text" name="lastname">
+          </label>
+          <p></p>
+          <label>
+              Email:<input type="text" name="email">
+          </label>
+          <p></p>
+          <label>
+              Password:<input type="password" name="password">
+          </label>
+          <p></p>
+          <label>
+              PW Confirm:<input type="password" name="pwconfirm">
+          </label>
+          <p></p>
+          <label>
+              Birthdate:<input type="date" name="birthdate">
+          </label>
+            <p></p>
+          <label>
+             Male<input type="radio" name="gender" value="male">
+          </label>
+          <label>
+             Female<input type="radio" name="gender" value="female">
+          </label>
+          <label>
+             Other<input type="radio" name="gender" value="other">
+          </label>
+          <p></p>
+          <textarea name="description"></textarea>
+          <p></p>
+
+
+          <select name="Favorite Language">
+              <option value="JavaScript">JavaScript</option>
+              <option value="Python">Python</option>
+          </select>
+            <p></p>
+          <input type="submit" value="Submit">
+        </form>
 </body>
 </html>
