--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                <p>I'm starting to learn HTML even though I'm still not really solid on formatting and layout.</p>
                <h2>Article Two</h2>
                <p>At somepoint I should figure out if there is a spell checker for Atom,
-                 hmm how would that even work? Perhaps the best thing would be to copy blocks of text from word?</p>
+                 hmm how would that even work? Perhaps the best thing would be to copy blocks of text from word?
+                do i need to make a branch to commit changes?</p>
            </div>
            <div id="side-menu">
 
