--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                <h2>Article Two</h2>
                <p>At somepoint I should figure out if there is a spell checker for Atom,
                  hmm how would that even work? Perhaps the best thing would be to copy blocks of text from word?
-                do i need to make a branch to commit changes?</p>
+                do i need to make a branch to commit changes? Ok that commit appeared to work I just had to acctually
+              comment on the commit so lets try this again</p>
            </div>
            <div id="side-menu">
 
