--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
            </div>
            <div id="main-content">
                <h2>Article One</h2>
-               <p>I'm starting to learn HTML even though I'm still not really solid on formatting and layout.</p>
+               <p>Today was my first day at Coding Dojo. For many reasons, I’ve decided to leave the mortgage industry and cross train as a software developer. As I’m mostly writing this blog as a test of my website building skills I’m going to leave this very brief while I work on understanding the HTML that makes this blog tick..</p>
                <h2>Article Two</h2>
                <p>At somepoint I should figure out if there is a spell checker for Atom,
                  hmm how would that even work? Perhaps the best thing would be to copy blocks of text from word?
