--- a/index.html
+++ b/index.html
@@ -56,12 +56,13 @@
       <p>The Header of My Blog</p>
 
     </div>
-    <div  class="boxshadow body">
-      <h3>Insomnia is good for learning to code.</h3>
-        <p>This certainly isn’t going to be a full blog post as I’m wrapping up the first bits of this website at 2am, but I must start somewhere. I’m creating this blog as I take the first steps on the path to becoming a software developer. About a week ago, I started my dev boot camp with CodingDojo and made my first mockup of a website:t</p>
+    <div  id= "sunday02272017"class="boxshadow body">
+      <h2>Insomnia is good for learning to code.</h2>
+      <h4>Sunday 02-27-2017</h4>
+        <p>This certainly isn’t going to be a full blog post as I’m wrapping up the first bits of this website at 2am, but I must start somewhere. I’m creating this blog as I take the first steps on the path to becoming a software developer. About a week ago, I started my dev boot camp with CodingDojo and made my first mockup of a website:</p>
 
         <img src="mockup.png" alt="Mockup">
-        <p>Right now it’s Sunday night and I’ve published my first blog site with animations and responsive design elements, and all of it is hand built from a blank text file. I can’t tell you how satisfying that is. There is a special joy in crafting something by hand, even if the that something is an intangible digital artifact.</p>
+        <p>   Yes that web page is as bad as it looks! None of the links work, all of the sizeing is incredibly fragile, and it's certainly not published anywhere, which is why that is just  screen snip. But it was a good first step. This page is so far beyond that I'm amazed how far I've come in just a week. But, right now it’s Sunday night and I’ve published my first blog site with animations and responsive design elements, and all of it is hand built from a blank text file. I can’t tell you how satisfying that is. There is a special joy in crafting something by hand, even if the that something is an intangible digital artifact.</p>
     </div>
     <div  class="boxshadow body">
         <p>body</p>
